--- a/css/index.css
+++ b/css/index.css
@@ -92,3 +92,19 @@ body {
     font-weight: bolder;
     margin: 0 auto;
 }
+
+.col-4 {
+    box-shadow: 0px 10px 6px -6px #c7c6c6;
+    font-size: 90px;
+    font-weight: bolder;
+    text-align: center;
+    font-family: 'Sedgwick Ave Display', cursive;
+}
+
+.result {
+    font-size: 70px;
+    font-weight: bolder;
+    text-align: center;
+    margin: 20px 0px;
+    display: none;
+}
